--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
